tests/fail/ambiguous_path_resolution.txt
error[E0032]: ambiguous path resolution: /bar exists in the workspace, but also matches a build recipe
 --> /INPUT:6:10
  |
5 | build "bar" {
  |       ----- note: matched this build recipe
6 |     info "<out>"
  |          ^^^^^^^ ambiguous path resolution: /bar exists in the workspace, but also matches a build recipe
  |
  = help: use `<...:out-dir>` or `<...:workspace>` to disambiguate between paths in the workspace and the output directory
